<resources>
    <string name="app_name">HousingCart Management</string>
    <string name="image">image</string>
    <string name="tap_to_select">Tap to Select</string>
    <string name="city">City*</string>
    <string name="property_type">Property Type*</string>
    <string name="sub_property_type">Sub Property Type*</string>
    <string name="google_map_link">Google Map Link*</string>
    <string name="property_status">Property Status*</string>
    <string name="ready">Ready</string>
    <string name="under_construction">Under Construction</string>
    <string name="rated">Rated*</string>
    <string name="for_rent">For Rent</string>
    <string name="rent_or_sale">Rent or Sale*</string>
    <string name="price">Property Price*</string>
    <string name="address">Address</string>
    <string name="property_address">Property Address</string>
    <string name="name_of_the_property">Name of the property</string>
    <string name="property_name">Property Name*</string>
    <string name="location">Location</string>
    <string name="property_information">Property Information</string>
    <string name="for_sale">For Sale</string>
    <string name="broker">Broker</string>
    <string name="builder">Builder</string>
    <string name="name_of_the_owner_broker">Name of the owner/broker</string>
    <string name="owner_broker_name">Owner/Broker Name*</string>
    <string name="max_price">Max Price</string>
    <string name="min_price">Min Price</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="sq_feet">Sq Feet*</string>
    <string name="year_built">Year Built</string>
    <string name="select_facing">Select Facing*</string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="featured">Featured*</string>
    <string name="ready_to_move">Ready to Move</string>
    <string name="number_of_the_owner_broker">Number of the owner/broker</string>
    <string name="owner_broker_number">Owner/Broker Number*</string>
    <string name="select_bhk">Select BHK*</string>
    <string name="owner">Owner</string>
    <string name="arpan">Arpan</string>
    <string name="data_entry">Data Entry</string>
    <string name="browse_your_gallery_or_take_a_picture_from_the_phone_camera_to_upload">Browse your Gallery to upload</string>
    <string name="add_company_image">Add Company Image</string>
    <string name="car_parking">Car Parking</string>
    <string name="swimming_pool">Swimming Pool</string>
    <string name="internet">Internet</string>
    <string name="balcony">Balcony</string>
    <string name="cable_tv">Cable TV</string>
    <string name="near_church">Near Church</string>
    <string name="coffee_pot">Coffee Pot</string>
    <string name="air_conditioning">Air Conditioning</string>
    <string name="near_green_zone">Near Green Zone</string>
    <string name="near_estate">Near Estate</string>
    <string name="dishwasher">Dishwasher</string>
    <string name="description">Description</string>
    <string name="length">Length</string>
    <string name="breadth">Breadth</string>
    <string name="nearby_famous_area">Nearby Famous Areas</string>
    <string name="area">Area</string>
    <string name="email_of_the_owner">Email of the Owner</string>
    <string name="todo">TODO</string>
    <string name="add_thumbnail_image">Add Thumbnail Image</string>
    <string name="add_property_images">Add Property Images</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="a_platform_for_all_your_needs">A platform for all your needs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="housing_cart">Housing Cart</string>
    <string name="office_updates">Office Meetings</string>
    <string name="your_profile">Profile</string>
    <string name="scan_qr">Generate QR</string>
    <string name="search_here">Search here</string>
    <string name="out">OUT</string>
    <string name="in"> IN :</string>
    <string name="outd">OUT :</string>
    <string name="specify_reason">Specify Reason</string>
    <string name="task">Task</string>
    <string name="add_description">Add Description</string>
    <string name="choose_date">Choose Date</string>
    <string name="add_task">Add Task</string>

    <string name="adapter_dp_transition">adapter dp transition</string>
    <string name="adapter_name">adapter name</string>
    <string name="adapter_date">adapter date</string>
    <string name="adapter_category">adapter category</string>
    <string name="adapter_city">adapter city</string>
    <string name="adapter_content">adapter content</string>
    <string name="adapter_pdf">adapter pdf</string>
    <string name="adapter_image">adapter image</string>
    <string name="no_deadline">No Deadline</string>
    <string name="deadline">Deadline</string>
    <string name="duration">Duration</string>
    <string name="no_task_assigned_to_you">No task assigned to you!</string>
    <string name="assign_task">Assign Task</string>
    <string name="title">Title</string>
    <string name="task_title">Task title</string>
    <string name="assign_task_to">Assign Task To</string>
    <string name="describe_the_task_work">Describe the task(work)</string>
    <string name="topic">Topic</string>
    <string name="new_announcement">New Meeting</string>
    <string name="announcement_on">Meeting on</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="inform_everyone">Inform Everyone!</string>
    <string name="meeting_lists">Meeting Lists</string>
    <string name="assigned_tasks">Assigned Tasks</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="select_month">Select Month</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="fetching_attendance">Fetching Attendance</string>
    <string name="fetching_meetings">Fetching Meetings</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="search_tasks">Search Tasks</string>
    <string name="add_your_tasks_here">Add your tasks here</string>
    <string name="personal_task">Personal Task</string>
    <string name="personal_tasks">Personal Tasks</string>
    <string name="profile">Profile</string>
    <string name="_45">45</string>
    <string name="quizes_won">Quizes Won</string>
    <string name="working_days">Working Days</string>
    <string name="performace">Performace</string>
    <string name="add_personal_details">Add personal details</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="position">Position</string>
    <string name="marketing_telecaller">Marketing, Telecaller...</string>
    <string name="_626xxxx906">626XXXX906</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="instagram">Instagram</string>
    <string name="facebook_id">Facebook Id</string>
    <string name="adhaar_no">Adhaar No.</string>
    <string name="_9134xxxx5394">9134XXXX5394</string>
    <string name="employee_profiles">Employee Profiles</string>
    <string name="present_days">Present Days</string>
    <string name="explore_employees_profile">Explore Employees Profile</string>
    <string name="cancel">Cancel</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="delete">Delete</string>
    <string name="are_your_sure_you_want_to_delete_this_user">Are your sure you want to delete this user?</string>
    <string name="employee_list">Employee List</string>
    <string name="sign_out">Sign Out!</string>


</resources>