<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools"
    android:background="@color/white"
    android:clickable="false"
    android:focusable="true"
    android:id="@+id/lay1"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical"
            android:paddingBottom="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_back_view"
                    android:contentDescription="@string/image"
                    android:padding="10dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/lexend"
                    android:text="@string/add_personal_details"
                    android:textColor="@color/main_blue"
                    android:textSize="20sp" />

            </LinearLayout>


            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:failureImage="@drawable/ic_avtar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:roundedCornerRadius="50dp"
                fresco:placeholderImage="@drawable/ic_image_holder" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_male"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/lexend"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/male"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_male"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/lexend"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/female"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />


            </LinearLayout>


            <TextView
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="@string/_626xxxx906"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="10"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck">

                <requestFocus />

            </EditText>

            <TextView
                android:id="@+id/about_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/position"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="@string/marketing_telecaller"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lexend"
                android:text="@string/adhaar_no"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/adhaaar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="@string/_9134xxxx5394"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="12"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/insta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lexend"
                android:text="@string/instagram"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="&#64;username"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/bg_card"
                android:backgroundTint="@color/green_300"
                android:fontFamily="@font/lexend"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:drawableTint="@color/white"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>