<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/layout"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/back"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_back_view"
        android:contentDescription="@string/image"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/lexend"
        android:text="@string/new_announcement"
        android:layout_marginTop="50dp"
        android:textColor="@color/main_blue"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">




            <TextView
                android:id="@+id/x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lexend"
                android:text="@string/topic"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:gravity="start|top"
                android:hint="@string/announcement_on"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_card"
                    android:backgroundTint="@color/main_yellow"
                    android:fontFamily="@font/lexend"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:layout_margin="10dp"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_card"
                    android:backgroundTint="@color/main_yellow"
                    android:fontFamily="@font/lexend"
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_margin="10dp"
                    android:text="@string/time"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>



                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/rv"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:listitem="@layout/task_user"
                    app:layout_constraintTop_toBottomOf="@+id/assign_to" />



            <TextView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_card"
                android:backgroundTint="@color/green_300"
                android:fontFamily="@font/lexend"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/inform_everyone"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>